// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordRecoveryModal component tests matches snapshot 1`] = `
<Modal
  className="main-modal"
  closable={false}
  closeIcon={
    <i
      className="icon icon-cross main-close-btn"
    />
  }
  footer={null}
  maskClosable={false}
  visible={true}
>
  <div
    className="main-modal__container"
  >
    <div
      className="main-modal__header"
    >
      <Connect(NotificationsDock)
        context="recovery-modal"
      />
      <h2
        className="main-modal__title"
      >
        <Memo(FormattedMessage)
          id="passwordRecoveryModal.title"
        />
      </h2>
    </div>
    <div
      className="main-modal__body"
    >
      <div
        className="mt-24 mb-24 text-align-center"
      >
        <img
          alt="{Translation id: passwordRecoveryModal.imgAlt}"
          src="/images/auth/Reset_Password_Link.svg"
        />
      </div>
      <p
        className="mb-8"
      >
        <Memo(FormattedMessage)
          id="passwordRecoveryModal.description.first"
        />
      </p>
      <a
        className="main-link d-inline-block mb-16 in-black font-600"
        href="mailto:test@examle.com"
      >
        test@examle.com
      </a>
      <p>
        <Memo(FormattedMessage)
          id="passwordRecoveryModal.description.second"
        />
      </p>
    </div>
    <div
      className="main-modal__footer justify-content-space-between"
    >
      <Link
        href="/log_in"
      >
        <a>
          <Button
            className="p-0"
            onClick={[MockFunction]}
            text={
              Object {
                "id": "passwordRecoveryModal.btnToLogin",
              }
            }
            type="link"
          />
        </a>
      </Link>
      <ForwardRef(InternalForm)>
        <Button
          disabled={false}
          loading={false}
          onClick={[MockFunction]}
          size="large"
          text={
            Object {
              "id": "passwordRecoveryModal.btnResend",
            }
          }
          type="secondary"
        />
      </ForwardRef(InternalForm)>
    </div>
  </div>
</Modal>
`;

exports[`PasswordRecoveryModal component tests when status present 1`] = `
<Modal
  className="main-modal"
  closable={false}
  closeIcon={
    <i
      className="icon icon-cross main-close-btn"
    />
  }
  footer={null}
  maskClosable={false}
  visible={true}
>
  <div
    className="main-modal__container"
  >
    <div
      className="main-modal__header"
    >
      <Connect(NotificationsDock)
        context="recovery-modal"
      />
      <Alert
        className={null}
        hasNoIcon={false}
        icon={
          <i
            className="icon icon-info"
          />
        }
        isDiscardable={false}
        message="Email error"
        onDiscard={null}
        showIcon={true}
        type="error"
      />
      <h2
        className="main-modal__title"
      >
        <Memo(FormattedMessage)
          id="passwordRecoveryModal.title"
        />
      </h2>
    </div>
    <div
      className="main-modal__body"
    >
      <div
        className="mt-24 mb-24 text-align-center"
      >
        <img
          alt="{Translation id: passwordRecoveryModal.imgAlt}"
          src="/images/auth/Reset_Password_Link.svg"
        />
      </div>
      <p
        className="mb-8"
      >
        <Memo(FormattedMessage)
          id="passwordRecoveryModal.description.first"
        />
      </p>
      <a
        className="main-link d-inline-block mb-16 in-black font-600"
        href="mailto:test@examle.com"
      >
        test@examle.com
      </a>
      <p>
        <Memo(FormattedMessage)
          id="passwordRecoveryModal.description.second"
        />
      </p>
    </div>
    <div
      className="main-modal__footer justify-content-space-between"
    >
      <Link
        href="/log_in"
      >
        <a>
          <Button
            className="p-0"
            onClick={[MockFunction]}
            text={
              Object {
                "id": "passwordRecoveryModal.btnToLogin",
              }
            }
            type="link"
          />
        </a>
      </Link>
      <ForwardRef(InternalForm)>
        <Button
          disabled={false}
          loading={false}
          onClick={[MockFunction]}
          size="large"
          text={
            Object {
              "id": "passwordRecoveryModal.btnResend",
            }
          }
          type="secondary"
        />
      </ForwardRef(InternalForm)>
    </div>
  </div>
</Modal>
`;
